crates/toml/tests/snapshots/invalid/local-time/trailing-dotdot.stderr
TOML parse error at line 1, column 13
  |
1 | t = 12:13:14..
  |             ^
expected newline, `#`
